--- a/web/view/leiaute.twig
+++ b/web/view/leiaute.twig
@@ -132,7 +132,7 @@
     <script src="{{ asset('clean-blog.min.js', 'js') }}"></script>
 
     <!-- JavaScript do quadro -->
-    <script src="{{ asset('copia.js', 'js') }}"></script>
+    <script src="{{ asset('acao.js', 'js') }}"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
