--- a/web/view/cadastroFrequencia.twig
+++ b/web/view/cadastroFrequencia.twig
@@ -16,7 +16,47 @@
                     <div class="form-group">
                         <select class="form-control" id="acao_social" required>
                             <option value="">Selecione</option>
+                            {% for acao in acoes_sociais %}
+                            <option value="{{ acao.id }}" {% if acao is defined and acao.id == acao.id %} selected {% endif %}>{{ acao.nome }}</option>
+                            {% endfor %}
                         </select>
+                    </div>
+                    <div class="row">
+                        <fieldset>
+                        <legend><i class="glyphicon glyphicon-menu-right"></i><b>Dados da ação social</b></legend>
+                            <div class="form-group col-sm-6">
+                                <label for="voluntario">Voluntário</label>
+                                <input type="text" name="voluntario" class="form-control" value="{% if acao is defined %}{{ acao.voluntario.pessoa.nome }}{% endif %}" disabled>
+                            </div>
+                            <div class="form-group col-sm-2">
+                                <label for="entrada">Entrada</label>
+                                <input type="text" name="entrada" class="form-control" value="{% if acao is defined %}{{ acao.voluntario.pessoa.nome }}{% endif %}" disabled>
+                            </div>
+                            <div class="form-group col-sm-2">
+                                <label for="saida">Saída</label>
+                                <input type="text" name="saida" class="form-control" value="{% if acao is defined %}{{ acao.voluntario.pessoa.nome }}{% endif %}" disabled>
+                            </div>
+                            <div class="form-group col-sm-3">
+                                <label for="dia">Dia</label>
+                                <input type="text" name="dia" class="form-control" value="{% if acao is defined %}{{ acao.voluntario.pessoa.nome }}{% endif %}" disabled>
+                            </div>
+                            <div class="form-group col-sm-3">
+                                <label for="turno">Turno</label>
+                                <input type="text" name="turno" class="form-control" value="{% if acao is defined %}{{ acao.voluntario.pessoa.nome }}{% endif %}" disabled>
+                            </div>
+                            <div class="form-group col-sm-2">
+                                <label for="inicio">Início</label>
+                                <input type="text" name="inicio" class="form-control" value="{% if acao is defined %}{{ acao.voluntario.pessoa.nome }}{% endif %}" disabled>
+                            </div>
+                            <div class="form-group col-sm-2">
+                                <label for="termino">Término</label>
+                                <input type="text" name="termino" class="form-control" value="{% if acao is defined %}{{ acao.voluntario.pessoa.nome }}{% endif %}" disabled>
+                            </div>
+                            <div class="form-group col-sm-2">
+                                <label for="situacao">Situação</label>
+                                <input type="text" name="situacao" class="form-control" value="{% if acao is defined %}{{ acao.voluntario.pessoa.nome }}{% endif %}" disabled>
+                            </div>
+                        </legend>
                     </div>
                     <div class="row">
                         <table class="table table-responsive table-hover">
@@ -24,20 +64,19 @@
                             <thead class="thead-light">
                                 <tr>
                                     <th class="col-sm-5">Usuário</th>
-                                    <th class="col-sm-5">Responsável</th>
+                                    <th class="col-sm-4">Responsável</th>
                                     <th class="col-sm-2"><center>Dia</center></th>
+                                    <th class="col-sm-1"><center>Certificado</center></th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Fulano</td>
-                                    <td>Pai do Fulano</td>
+                                    {% for usuario in turma %}
+                                    <td>usuario.nome</td>
+                                    <td>usuario.responsavel</td>
                                     <td><input type="date" id="dataFrequencia" class="form-control" placeholder="dd/mm/aaaa" required></td>
-                                </tr>
-                                <tr>
-                                    <td>Beltrano</td>
-                                    <td></td>
-                                    <td><input type="date" id="dataFrequencia" class="form-control" placeholder="dd/mm/aaaa" required></td>
+                                    <td><a href="{{ path('frequenciaCertificar',{'acao':acao.id, 'usuario':usuario.id}) }}"><span class="text-center glyphicon glyphicon-certificate"></span></a></td>
+                                    {% endfor %}
                                 </tr>
                             </tbody>
                         </table>
